// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummury with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    Expense
     totalling 
    $0.15
     
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummury with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    20
     
    Expenses
     totalling 
    $2.00
     
  </h1>
</div>
`;
